Enhanced PWA support for mobile app installation

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,13 +4,15 @@
   "description": "Create and manage invoices and quotations",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#ffffff",
+  "background_color": "#0f172a",
   "theme_color": "#002D62",
+  "orientation": "portrait-primary",
   "icons": [
     {
       "src": "/logo.jpg",
       "sizes": "512x512",
-      "type": "image/jpeg"
+      "type": "image/jpeg",
+      "purpose": "any maskable"
     }
   ]
 }
