Fix production errors: disable service worker, update to app-logo.png, fix deprecated meta tags

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,15 +4,21 @@
   "description": "Create and manage invoices and quotations",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#0f172a",
+  "background_color": "#002D62",
   "theme_color": "#002D62",
   "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "/logo.jpg",
+      "src": "/app-logo.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/app-logo.png",
       "sizes": "512x512",
-      "type": "image/jpeg",
-      "purpose": "any maskable"
+      "type": "image/png",
+      "purpose": "maskable"
     }
   ]
 }
