--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "@types/react-color": "^3.0.12",
     "@types/react-dom": "^18",
     "@types/uuid": "^9.0.8",
+    "eslint": "9.39.1",
+    "eslint-config-next": "16.0.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
